# AgentEconomy

./: README.md  main.py  pyproject.toml
agenteconomy/agent/: bank.py  firm.py  government.py  household.py
agenteconomy/center/: Ecocenter.py  LaborMarket.py  Model.py  ProductMarket.py  transaction.py
agenteconomy/config/: config.py  config.yaml
agenteconomy/data/: Direct Total Requirements, After Redefinitions - Summary.csv  industry_cate_map.json  industry_cate_map.py  industry_map.json  retailer_mfg.json
agenteconomy/data/household/: J357328_merged_household_persona_mapping.csv  census2010_to_soc2010_exploded.csv  codebook.json  personas_final.json
agenteconomy/llm/: config.yaml  llm.py  prompt_template.py
agenteconomy/market/: AbstractResourceMarket.py  IntermediateGoodsProcurement.py  __init__.py  initialize_resources.py
agenteconomy/simulation/: agent_loader.py  data_loader.py  initializer.py  main.py  simulator.py
agenteconomy/utils/: embedding.py  load_io_table.py  load_qdrant_client.py  logger.py  metrics.py  price_calculator.py  product_attribute_loader.py  product_type_design.py
qdrant_database/: meta.json
