[project]
name = "agenteconomy"
version = "0.1.0"
description = ""
authors = [
    {name = "xiaxu",email = "1041621109@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "ray[default] (>=2.40.0,<3.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "transformers (>=4.57.5,<5.0.0)",
    "torch (>= 2.7.0, <3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "qdrant-client (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
