[project]
name = "agenteconomy"
version = "0.1.0"
description = ""
authors = [
    {name = "xiaxu",email = "1041621109@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "ray[default] (>=2.40.0,<3.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "transformers (>=4.57.5,<5.0.0)",
    "torch (>= 2.7.0, <3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "qdrant-client (>=1.16.2,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "litellm (>=1.80.16,<2.0.0)",
    "instructor[litellm] (>=1.14.3,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "yfinance (==0.2.58)",
    "praw (==7.8.1)",
    "prawcore (==2.4.0)",
    "akracer (>=0.0.14,<0.0.15)",
    "akshare (>=1.18.19,<2.0.0)",
    "arch (>=8.0.0,<9.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "backcall (>=0.2.0,<0.3.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "bidict (>=0.23.1,<0.24.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "cffi (>=2.0.0,<3.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "curl-cffi (>=0.14.0,<0.15.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "decorator (>=5.2.1,<6.0.0)",
    "et-xmlfile (>=2.0.0,<3.0.0)",
    "finnhub-python (>=2.4.26,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-socketio (>=5.6.0,<6.0.0)",
    "fredapi (>=0.5.2,<0.6.0)",
    "frozendict (>=2.4.7,<3.0.0)",
    "frozenlist (>=1.8.0,<2.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "html5lib (>=1.1,<2.0)",
    "httpcore (>=1.0.9,<2.0.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "ipython-genutils (>=0.2.0,<0.3.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "jsonpath (>=0.82.2,<0.83.0)",
    "jsons (>=1.6.3,<2.0.0)",
    "jsonschema-specifications (>=2025.9.1,<2026.0.0)",
    "kiwisolver (>=1.4.9,<2.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "markupsafe (>=3.0.3,<4.0.0)",
    "mini-racer (>=0.14.0,<0.15.0)",
    "multidict (>=6.7.0,<7.0.0)",
    "multitasking (>=0.0.12,<0.0.13)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "packaging (>=26.0,<27.0)",
    "parso (>=0.8.5,<0.9.0)",
    "patsy (>=1.0.2,<2.0.0)",
    "peewee (>=3.19.0,<4.0.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "pickleshare (>=0.7.5,<0.8.0)",
    "platformdirs (>=4.5.1,<5.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "propcache (>=0.4.1,<0.5.0)",
    "protobuf (>=6.33.4,<7.0.0)",
    "psutil (>=7.2.1,<8.0.0)",
    "ptyprocess (>=0.7.0,<0.8.0)",
    "py-mini-racer (>=0.6.0,<0.7.0)",
    "pycparser (>=3.0,<4.0)",
    "pydantic-core (>=2.41.5,<3.0.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "pyparsing (>=3.3.2,<4.0.0)",
    "python-engineio (>=4.13.0,<5.0.0)",
    "python-socketio (>=5.16.0,<6.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "rpds-py (>=0.30.0,<0.31.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "simple-websocket (>=1.1.0,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "traitlets (>=5.14.3,<6.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "typing-inspection (>=0.4.2,<0.5.0)",
    "tzdata (>=2025.3,<2026.0)",
    "update-checker (>=0.18.0,<0.19.0)",
    "urllib3 (>=2.6.3,<3.0.0)",
    "webencodings (>=0.5.1,<0.6.0)",
    "werkzeug (>=3.1.5,<4.0.0)",
    "wsproto (>=1.3.2,<2.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "yarl (>=1.22.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
